[package]
name = "dexamples"
version = "0.1.0"
authors = ["Steven Love <lovestevend@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.128" }
dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
